# amigo

./: LICENSE  README.md
CGKA_Benchmarks/: Cargo.toml  Dockerfile  README.md
CGKA_Benchmarks/benches/: benchmarks.rs  message_lengths.rs
CGKA_Benchmarks/src/: lib.rs  member.rs  tree.rs  upke.rs
Routing_Simulations/amigo-docker/: Dockerfile
Routing_Simulations/amigo-docker/protest/: py-requirements.txt
Routing_Simulations/amigo-docker/protest/arp/: arp-cache.cc
Routing_Simulations/amigo-docker/protest/mobility_models/: generate-mobility.py
Routing_Simulations/amigo-docker/protest/mobility_models/position_files/blockade1/node100/: 0.npy  2.npy
Routing_Simulations/amigo-docker/protest/mobility_models/position_files/blockade1/node50/: 0.npy  1.npy  2.npy
Routing_Simulations/amigo-docker/protest/mobility_models/position_files/blockade2/node100/: 0.npy  1.npy  2.npy
Routing_Simulations/amigo-docker/protest/mobility_models/position_files/blockade2/node50/: 0.npy  1.npy  2.npy
Routing_Simulations/amigo-docker/protest/routing/: digest-50000.cpp  digest-500000.cpp  digest-5000000.cpp  dynamic-50000.cpp  dynamic-500000.cpp  dynamic-5000000.cpp  normal-50000.cpp  normal-500000.cpp  normal-5000000.cpp  static-50000.cpp  static-500000.cpp  static-5000000.cpp
Routing_Simulations/amigo-docker/protest/traffic_models/: generate-traffic.py
Routing_Simulations/amigo-docker/runners/: run-test-model-gen.sh  run-test-sim.sh  run-test-traffic-gen.sh  setup-docker.sh  setup-ns3.sh  setup-pyenv.sh
(+125 files in other folders)
